cluster/prow/cherrypicker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: cherrypicker
  labels:
    app: cherrypicker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cherrypicker
  template:
    metadata:
      labels:
        app: cherrypicker
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: cherrypicker
        image: gcr.io/k8s-prow/cherrypicker:v20211221-aa59567d4d
        imagePullPolicy: Always
        args:
        - --github-token-path=/etc/github/oauth
        - --dry-run=false
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: github-token
          mountPath: /etc/github
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
      - name: hmac
        secret:
          secretName: hmac-token
      - name: github-token
        secret:
          secretName: oauth-token
