cluster/prow/crier_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: gcr.io/k8s-prow/crier:v20211221-aa59567d4d
        args:
        - --blob-storage-workers=1
        - --s3-credentials-file=/etc/aws-creds/service-account.json
        - --config-path=/etc/config/config.yaml
        - --github-token-path=/etc/github/oauth
        - --github-workers=5
        - --job-config-path=/etc/job-config
        - --kubernetes-blob-storage-workers=1
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: credentials-aws-publisher
          mountPath: etc/aws-creds
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: oauth
        secret:
          secretName: oauth-token
      - name: credentials-aws-publisher
        secret:
          secretName: credentials-aws-publisher
