cluster/prow/deck_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: deck
  labels:
    app: deck
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: deck
      terminationGracePeriodSeconds: 30
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
        args:
        - --provider=github
        - --upstream=http://localhost:8080
        - --github-team=all/engineers
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://prow.ginbits.com/oauth2/callback
        - --email-domain=*
        - --cookie-samesite=none
      - name: deck
        image: gcr.io/k8s-prow/deck:v20211221-aa59567d4d
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        - name: metrics
          containerPort: 9090
        args:
        - --tide-url=http://tide/
        - --hook-url=http://hook:8888/plugin-help
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --spyglass=true
        - --rerun-creates-job
        - --github-token-path=/etc/github/oauth
        - --github-oauth-config-file=/etc/github/config/secret
        - --oauth-url=/github-login
        - --cookie-secret=/etc/cookie/cookie
        - --s3-credentials-file=/etc/s3-credentials/service-account.json
        - --plugin-config=/etc/plugins/plugins.yaml
        volumeMounts:
        - name: extensions
          mountPath: /static/extensions
          readOnly: true
        - name: oauth-config
          mountPath: /etc/github/config
          readOnly: true
        - name: cookie-secret
          mountPath: /etc/cookie
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: oauth-token
          mountPath: /etc/github
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
        - name: s3-credentials
          mountPath: /etc/s3-credentials
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
      volumes:
      - name: extensions
        configMap:
          name: deck-static
      - name: oauth-config
        secret:
          secretName: github-app-credentials
      - name: oauth-token
        secret:
          secretName: oauth-token
      - name: cookie-secret
        secret:
          secretName: cookie
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: plugins
        configMap:
          name: plugins
      - name: s3-credentials
        secret:
          secretName: credentials-aws-publisher
