cluster/prow/needs-rebase_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: needs-rebase
        image: gcr.io/k8s-prow/needs-rebase:v20211221-aa59567d4d
        imagePullPolicy: Always
        args:
        - --dry-run=false
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/oauth
        - --update-period=6h
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: hmac
        secret:
          secretName: hmac-token
      - name: oauth
        secret:
          secretName: oauth-token
      - name: plugins
        configMap:
          name: plugins
