cluster/prow/prow_controller_manager_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: prow-controller-manager
  labels:
    app: prow-controller-manager
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: prow-controller-manager
  template:
    metadata:
      labels:
        app: prow-controller-manager
    spec:
      serviceAccountName: prow-controller-manager
      containers:
      - name: prow-controller-manager
        image: gcr.io/k8s-prow/prow-controller-manager:v20211221-aa59567d4d
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --enable-controller=plank
        - --job-config-path=/etc/job-config
        ports:
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
