cluster/prow/tide_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: tide
      containers:
      - name: tide
        image: gcr.io/k8s-prow/tide:v20211221-aa59567d4d
        args:
        - --dry-run=false
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/oauth
        - --config-path=/etc/config/config.yaml
        ports:
        - name: http
          containerPort: 8888
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
