cluster/prow/cherrypicker_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherrypicker
  namespace: ci
spec:
  selector:
    app: cherrypicker
  ports:
  - port: 80
    targetPort: 8888
  type: ClusterIP
