cluster/prow/crier_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crier
  namespace: ci
  name: crier
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: crier
