cluster/prow/deck_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deck
  namespace: ci
  name: deck
spec:
  selector:
    app: deck
  ports:
  - name: main
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    protocol: TCP
  - name: oauth-proxy
    port: 4180
    protocol: TCP
  type: NodePort
