cluster/prow/hook_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hook
  namespace: ci
  name: hook
spec:
  selector:
    app: hook
  ports:
  - name: main
    port: 8888
    protocol: TCP
  - name: metrics
    port: 9090
    protocol: TCP
  type: NodePort
