cluster/prow/horologium_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: horologium
  namespace: ci
  name: horologium
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: horologium
