cluster/prow/needs-rebase_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  name: needs-rebase
spec:
  selector:
    app: needs-rebase
  ports:
  - port: 80
    targetPort: 8888
  type: NodePort
