cluster/prow/prow_controller_manager_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prow-controller-manager
  namespace: ci
  name: prow-controller-manager
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: prow-controller-manager
