cluster/prow/tide_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tide
  namespace: ci
  name: tide
spec:
  selector:
    app: tide
  ports:
  - name: main
    port: 80
    targetPort: 8888
    protocol: TCP
  - name: metrics
    port: 9090
    protocol: TCP
  type: ClusterIP
