cluster/prow/deck-oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
  name: deck-ingress-oauth2
spec:
  rules:
  - host: k8s.ginbits.com
    http:
      paths:
      - path: /
        backend:
          serviceName: deck
          servicePort: 4180
