cluster/prow/deck_oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
     auth_request_set $name_upstream $upstream_cookie__oauth2_proxy;
  name: deck-ingress-oauth2
spec:
  rules:
  - host: k8s.ginbits.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 4180
